# python-project-50

./: .gitignore  Makefile  README.md  demo.cast  pyproject.toml
.github/workflows/: pyci.yml
formats/: stylish.py
gendiff/: cli.py  diff.py  diff_builder.py  engie.py  generate_diff.py  parser.py  read_files.py  utilits.py
gendiff/formats/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py  start_gendiff.py
tests/: test_diff.py  test_gendiff.py  test_json.py  test_plain.py  test_stylish.py  test_utils.py
tests/fixtures/: expected_diff.txt  file3.txt  result_json  result_json.txt  result_plain.txt
